--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
     "concurrently": "^9.1.0",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "esm": "^3.2.25",
+    "express": "^4.21.1",
     "grammy": "^1.31.3",
     "node-fetch": "^3.3.2",
+    "prisma": "^5.22.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.3",
     "whatwg-url": "^14.0.0"
