--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "telegraf-bot",
   "version": "1.0.0",
   "main": "bot.ts",
-  "scripts": {},
+  "scripts": {
+    "dev": "nodemon"
+  },
   "keywords": [],
   "module": "commonjs",
   "author": "",
@@ -10,6 +12,7 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.9.0",
     "concurrently": "^9.1.0",
     "nodemon": "^3.1.7",
@@ -17,13 +20,17 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@types/connect-redis": "^0.0.23",
+    "@types/redis": "^4.0.10",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "esm": "^3.2.25",
     "express": "^4.21.1",
     "grammy": "^1.31.3",
+    "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
     "prisma": "^5.22.0",
+    "redis": "^4.7.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.3",
     "whatwg-url": "^14.0.0"
