--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,24 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "es2016",
     "module": "commonjs",
-    "moduleResolution": "node",
-    "strict": true,
+    "rootDir": "./src",
+    "outDir": "./dist",
+    "baseUrl": "./",
+    "paths": {
+      "@config": ["./src/config"],
+      "@middlewares": ["./src/middlewares"],
+      "@controllers": ["./src/controllers"],
+      "@errors": ["./src/errors"],
+      "@interfaces": ["./src/interfaces"],
+      "@models": ["./src/models"],
+      "@utils": ["./src/utils"]
+    },
     "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
     "skipLibCheck": true
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
